# tauri-from-rust

./: Cargo.toml  README.md  build.rs  tauri.conf.json
src/: main.rs
